[package]
name = "cse"
version = "0.1.0"
edition = "2024"

[dependencies]
either = { version = "1.15.0", features = ["serde"] }
hexx = { version = "0.23.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0.3.44", features = ["serde", "parsing", "formatting"] }
toml = "0.9.8"
